applications/whatever-ed-is-working-on/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whatever-ed-is-working-on
  labels:
    name: whatever-ed-is-working-on
