applications/whatever-ed-is-working-on/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: whatever-ed-is-working-on
  name: whatever-ed-is-working-on
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - whatever-ed-is-working-on.initialed85.cc
      secretName: whatever-ed-is-working-on
  rules:
    - host: whatever-ed-is-working-on.initialed85.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 3000
